nothing works idk why

--- a/Report/misc/bibliography.bib
+++ b/Report/misc/bibliography.bib
@@ -10,6 +10,18 @@
 	url = {https://doi.org/10.1093/acprof:oso/9780198525004.001.0001},
 }
 
+@book{franchini2016integrable,
+	author = {Franchini, Fabio},
+	year = {2016},
+	month = {09},
+	pages = {},
+	title = {An Introduction to Integrable Techniques for One-Dimensional Quantum Systems},
+	volume = {940},
+	isbn = {9783319484860},
+	journal = {Lecture Notes in Physics},
+	doi = {10.1007/978-3-319-48487-7}
+}
+
 @article{vonDelft1998bosonization,
 	author = {von Delft, Jan and Schoeller, Herbert},
 	title = {Bosonization for beginners — refermionization for experts},
