progress on both report and project; first functionant code for charge gap extraction (todo: check if physicall coherent)

--- a/Report/pictures/fermi-hubbard/xxz-phase-diagram.tex
+++ b/Report/pictures/fermi-hubbard/xxz-phase-diagram.tex
@@ -6,7 +6,7 @@
 	\draw[color=tabblue]
 		(-1,0) -- (1,0);
 	\draw[color=tabgreen, -stealth]
-		(1,0) -- (2,0) node[anchor=west]
+		(1,0) -- (2,0) node[anchor=west, color=black]
 			{$J_z/J_{xy}$};
 	\draw[color=black]
 		(-1,-0.05) node [anchor=north] 
