--- a/Report/sections/simulations.tex
+++ b/Report/sections/simulations.tex
@@ -3,9 +3,9 @@
 
 This section is devoted to delineate the system properties we aim to simulate. The algorithm used is finite-size DMRG, implemented in the \href{https://docs.julialang.org/en/}{\texttt{Julia language}} via the well supported \href{https://itensor.github.io/ITensors.jl/stable/index.html}{\texttt{ITensors.jl}}, \href{https://itensor.github.io/ITensorMPS.jl/stable/}{\texttt{ITensorsMPS.jl}} packages.
 
-\subsection{General strategy and target(s)}
+\subsection{What I would have liked to do}
 
-My final aim is to extract the Bosonization parameters $u$ and $K$ for the spinless Fermi-Hubbard model of Eq.~\eqref{eq:spinless-hamiltonian-pbc}. As said in Sec.~\ref{subsubsec:spinless-fermions-observables}, for a spinless model the task can be easy enough by performing the calculation of the charge compressibility $\kappa$ and the charge stiffness $\mathcal{D}$. From Eq.~\eqref{eq:charge-compressibility} and \eqref{eq:charge-stiffness} respectively,
+A good target is to extract the Bosonization parameters $u$ and $K$ for the spinless Fermi-Hubbard model of Eq.~\eqref{eq:spinless-hamiltonian-pbc}. As said in Sec.~\ref{subsubsec:spinless-fermions-observables}, for a spinless model the task can be easy enough by performing the calculation of the charge compressibility $\kappa$ and the charge stiffness $\mathcal{D}$. From Eq.~\eqref{eq:charge-compressibility} and \eqref{eq:charge-stiffness} respectively,
 \begin{equation}\label{eq:charge-compressibility-stiffness-definitions}
 	\kappa = \frac{K}{\pi u}
 	\qquad\text{and}\qquad
@@ -66,6 +66,6 @@ for a ``small'' flux variation $\delta\eta$. It is important to notice here that
 %\]
 %This condition is equivalent to requiring precisely one flux quantum to thread the ring.
 
-\subsection{Finite-size DMRG}
+\subsection{What I actually did}
 
-\todo
+All I described in the above section is a rather good strategy, provided you can simulate a big long chubby chain with a lot of fermions. It turns out, taken into account my computational resources, the entire strategy turns out to be a little optimistic. It would have been wiser to understand my limits earlier, but that's how life goes, I guess. \todo
