single-state proprety analyzer tool ready

--- a/Report/pictures/fermi-hubbard/jordan-wigner-phase-diagram.tex
+++ b/Report/pictures/fermi-hubbard/jordan-wigner-phase-diagram.tex
@@ -7,8 +7,8 @@
 			width=0.75\textwidth,
 			xlabel={$\Delta$},		ylabel={$h/J$},
 			xlabel style={right}, 	ylabel style={above},
-			xtick={1},				ytick={1},
-			xticklabel style={below right},
+			xtick={-1},				ytick={1},
+			xticklabel style={below},
 			yticklabel style={below left, xshift=0.1cm},
 			xmin=-2.5, 				ymin=-2,
 			xmax=1.5, 				ymax=2
